[workspace]
members = [
    "crates/toothpaste-entity",
    "crates/toothpaste-migration",
    "crates/toothpaste-backend",
    "crates/toothpaste-frontend",
]

resolver = "2"

[workspace.package]
version = "0.5.0"

[workspace.dependencies]
toothpaste-entity = { path = "./crates/toothpaste-entity" }
toothpaste-migration = { path = "./crates/toothpaste-migration" }
toothpaste-backend = { path = "./crates/toothpaste-backend" }
toothpaste-frontend = { path = "./crates/toothpaste-frontend" }

[profile.release]
lto = true
strip = true
opt-level = "z"
