[workspace]
members = [
    "crates/toothpaste-entity",
    "crates/toothpaste-migration",
    "crates/toothpaste-backend",
    "crates/toothpaste-frontend",
    "crates/toothpaste-cli",
    "crates/toothpaste-encrypt",
]

resolver = "2"

[workspace.package]
version = "0.6.2"

[workspace.dependencies]
toothpaste-entity = { path = "./crates/toothpaste-entity" }
toothpaste-migration = { path = "./crates/toothpaste-migration" }
toothpaste-backend = { path = "./crates/toothpaste-backend" }
toothpaste-frontend = { path = "./crates/toothpaste-frontend" }
toothpaste-cli = { path = "./crates/toothpaste-cli" }
toothpaste-encrypt = { path = "./crates/toothpaste-encrypt" }
aes-gcm = "0.10.1"
base64 = "0.22.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.128"

[profile.release]
panic = 'abort'
codegen-units = 1
opt-level = 'z'
lto = true
strip = true
