[package]
name = "toothpaste-backend"
version = { workspace = true }
edition = "2021"
description = "A pastebin written in Rust"

[dependencies]
toothpaste-entity = { workspace = true }
toothpaste-migration = { workspace = true }
axum = "0.7.4"
chrono = { version = "~0.4", features = ["serde"] }
clru = "0.6.1"
dotenv = "~0.15"
fnv = "~1.0"
futures = "~0.3"
nanoid = "~0.4"
sea-orm = { version = "^0", features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros" ] }
serde = { version = "1", features = ["derive"] }
serde-aux = "4.5.0"
serde_json = "~1.0"
structopt = "~0.3"
syntect = "5.2.0"
tera = "1.17.0"
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4.13", features = ["timeout"] }
tower-http = { version = "0.5.2", features = ["fs", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
