[package]
name = "toothpaste-backend"
version = { workspace = true }
edition = "2021"
description = "A pastebin written in Rust"

[dependencies]
toothpaste-entity = { workspace = true }
toothpaste-migration = { workspace = true }
axum = "0.7.4"
chrono = { version = "0.4.38", features = ["serde"] }
clru = "0.6.1"
futures = "0.3.31"
nanoid = "0.4.0"
sea-orm = { version = "1.1.0", features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros" ] }
serde = { version = "1", features = ["derive"] }
serde-aux = "4.5.0"
serde_json = "1.0.132"
structopt = "0.3.26"
tokio = { version = "1.40.0", features = ["full"] }
tower = { version = "0.5.1", features = ["timeout"] }
tower-http = { version = "0.6.1", features = ["fs", "cors"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
