[package]
name = "toothpaste-cli"
edition = "2021"
version.workspace = true

[dependencies]
toothpaste-encrypt = { workspace = true }
base64 = { workspace = true }
serde = { workspace = true }
clap = { version = "4.5.20", features = ["derive", "env"] }
ureq = { version = "2.7.2", features = ["json"] }
