[package]
name = "toothpaste-frontend"
publish = false
edition = "2021"
description = "Template for starting a Yew project using Trunk"
readme = "README.md"
repository = "https://github.com/yewstack/yew-trunk-minimal-template"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

[dependencies]
yew = { version= "0.21.0", features=["csr"] }
yew-router = "0.18.0"
indexmap = "2.6.0"
gloo-net = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen-futures = "0.4"
serde_json = "1.0.128"
web-sys = "0.3.72"
aes-gcm = "0.10.1"
base64 = "0.22.1"
tracing-subscriber = "0.3.18"
tracing-web = "0.1.3"
tracing = "0.1.40"
time = { version = "0.3", features = ["wasm-bindgen"] }
