[package]
name = "toothpaste-frontend"
publish = false
edition = "2021"
description = "Template for starting a Yew project using Trunk"
readme = "README.md"
repository = "https://github.com/yewstack/yew-trunk-minimal-template"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]
version = { workspace = true }

[dependencies]
aes-gcm = { workspace = true }
base64 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
gloo-net = "0.6.0"
gloo-timers = "0.3.0"
indexmap = "2.6.0"
syntect = { version = "5.0", default-features = false, features = ["default-fancy"] }
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3.72", features = ["Navigator", "Clipboard"] }
yew = { version= "0.21.0", features=["csr"] }
yew-router = "0.18.0"
