[package]
name = "toothpaste-migration"
version = { workspace = true }
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
async-std = { version = "^1", features = ["attributes", "tokio1"] }

[dependencies.sea-orm-migration]
version = "^0"
features = [
  "runtime-tokio-rustls",
  "sqlx-sqlite",
]
